# cmake-demo

./: .gitignore  CMakeLists.txt  README
doc/: demo.txt
lib/: CMakeLists.txt  hello.c  hello.h
src/: CMakeLists.txt  main.c
