PROJECT(DEMO)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# ---------------------------------
MESSAGE(STATUS "This is PROJECT_BINARY_DIR " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR " ${PROJECT_SOURCE_DIR})
#MESSAGE(STATUS "This is CMAKE_CURRENT_BINARY_DIR " ${CMAKE_CURRENT_BINARY_DIR})
#MESSAGE(STATUS "This is CMAKE_CURRENT_SOURCE_DIR " ${CMAKE_CURRENT_SOURCE_DIR})

# ---------------------------------
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src bin)

# ---------------------------------
INSTALL(CODE "MESSAGE(STATUS \"Sample install message ...\")")
INSTALL(CODE "MESSAGE(STATUS \"The CMAKE_INSTALL_PREFIX is: \" ${CMAKE_INSTALL_PREFIX})")
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/demo)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/demo)
INSTALL(PROGRAMS rundemo.sh DESTINATION bin)


