# 定义项目基本信息
PROJECT(DEMO)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# 输出项目相关信息
MESSAGE(STATUS "Project Name: " ${PROJECT_NAME})
MESSAGE(STATUS "HOME Dir: " $ENV{HOME})
MESSAGE(STATUS "This is PROJECT_BINARY_DIR " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR " ${PROJECT_SOURCE_DIR})
#MESSAGE(STATUS "This is CMAKE_CURRENT_BINARY_DIR " ${CMAKE_CURRENT_BINARY_DIR})
#MESSAGE(STATUS "This is CMAKE_CURRENT_SOURCE_DIR " ${CMAKE_CURRENT_SOURCE_DIR})

# 添加子目录
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src bin)

# 安装README等
INSTALL(CODE "MESSAGE(STATUS \"Sample install message ...\")")
INSTALL(CODE "MESSAGE(STATUS \"The CMAKE_INSTALL_PREFIX is: \" ${CMAKE_INSTALL_PREFIX})")
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/cmake/demo)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/demo)
INSTALL(PROGRAMS rundemo.sh DESTINATION bin)

# 功能测试(make test)
ADD_TEST(test ${PROJECT_BINARY_DIR}/bin/demo)
ENABLE_TESTING()

