# 该文件是编译 动态库 和 静态库 的模板
SET(LIBHELLO_SRC hello.c)

ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})

# 同时生成同名静态库
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
# 设置动态库版本号
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.18 SOVERSION 1)

# 输出信息
#GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
#MESSAGE(STATUS "This is the hello_static OUTPUT_NAME: ${OUTPUT_VALUE}")

# 安装库
INSTALL(TARGETS hello hello_static
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(FILES hello.h DESTINATION include/hello)

